test/libyul/yulSyntaxTests/switch_default_before_case.yul
{
    switch 42
    default {}
    case 1 {}
}
// ----
// ParserError 4904: (35-39): Case not allowed after default case.
